RESOLVED FIXED 166997
background-repeat-x doesn't work
https://bugs.webkit.org/show_bug.cgi?id=166997
Summary background-repeat-x doesn't work
Myles C. Maxfield
Reported 2017-01-12 15:59:48 PST
Created attachment 298723 [details] Reproduction See reproduction.
Attachments
Reproduction (284 bytes, text/html)
2017-01-12 15:59 PST, Myles C. Maxfield
no flags
WIP (12.94 KB, patch)
2017-01-15 12:15 PST, Myles C. Maxfield
no flags
Patch (13.42 KB, patch)
2017-01-17 16:26 PST, Myles C. Maxfield
simon.fraser: review+
Patch for committing (10.32 KB, patch)
2017-01-17 16:42 PST, Myles C. Maxfield
commit-queue: commit-queue-
Archive of layout-test-results from webkit-cq-01 for mac-elcapitan (908.53 KB, application/zip)
2017-01-17 17:48 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from ews103 for mac-elcapitan (851.27 KB, application/zip)
2017-01-17 18:38 PST, Build Bot
no flags
Myles C. Maxfield
Comment 1 2017-01-12 16:01:16 PST
CSSParserFastPaths::isKeywordPropertyID has commented lines: // FIXME-NEWPARSER: Treat the following properties as keyword properties: // case CSSPropertyBackgroundRepeatX: // case CSSPropertyBackgroundRepeatY: Uncommenting these causes the example to render as expected.
Myles C. Maxfield
Comment 2 2017-01-13 11:02:10 PST
dhyatt says this is just an oversight
Myles C. Maxfield
Comment 3 2017-01-15 12:15:31 PST
Simon Fraser (smfr)
Comment 4 2017-01-15 13:42:10 PST
Comment on attachment 298918 [details] WIP View in context: https://bugs.webkit.org/attachment.cgi?id=298918&action=review > Source/WTF/wtf/Platform.h:1217 > -#define HAVE_TOUCH_BAR 1 > +#define HAVE_TOUCH_BAR 0 Unrelated.
Myles C. Maxfield
Comment 5 2017-01-17 16:26:45 PST
Simon Fraser (smfr)
Comment 6 2017-01-17 16:35:59 PST
Comment on attachment 299082 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=299082&action=review > LayoutTests/fast/backgrounds/background-repeat-x-y.html:16 > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-x: repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-x: no-repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-y: repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-y: no-repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-x: no-repeat; background-repeat-y: no-repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat: repeat-x; background-repeat-x: no-repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat: repeat-y; background-repeat-y: no-repeat; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-x: no-repeat; background-repeat: repeat-x; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-y: no-repeat; background-repeat: repeat-y; border: 1px solid black;"></div> > +<div style="display: inline-block; width: 200px; height: 200px; background-image: url('resources/map.jpg'); background-position: top left; background-repeat-x: garbage; border: 1px solid black;"></div> I think you need to make these smaller to fix 800x600.
Myles C. Maxfield
Comment 7 2017-01-17 16:42:35 PST
Created attachment 299085 [details] Patch for committing
WebKit Commit Bot
Comment 8 2017-01-17 17:35:42 PST
The commit-queue encountered the following flaky tests while processing attachment 299085 [details]: media/modern-media-controls/tracks-panel/tracks-panel-hide-click-outside.html bug 167148 (author: graouts@apple.com) fast/hidpi/video-controls-in-hidpi.html bug 112940 (authors: abarth@webkit.org, bdakin@apple.com, graouts@apple.com, rniwa@webkit.org, and webkit.review.bot@gmail.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9 2017-01-17 17:35:46 PST
The commit-queue encountered the following flaky tests while processing attachment 299085 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 10 2017-01-17 17:48:23 PST
Comment on attachment 299085 [details] Patch for committing Rejecting attachment 299085 [details] from commit-queue. New failing tests: imported/w3c/web-platform-tests/html/browsers/history/the-location-interface/location-protocol-setter-non-broken.html Full output: http://webkit-queues.webkit.org/results/2906613
WebKit Commit Bot
Comment 11 2017-01-17 17:48:27 PST
Created attachment 299094 [details] Archive of layout-test-results from webkit-cq-01 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 12 2017-01-17 18:38:54 PST
Comment on attachment 299085 [details] Patch for committing Attachment 299085 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2906808 New failing tests: fast/hidpi/video-controls-in-hidpi.html
Build Bot
Comment 13 2017-01-17 18:38:57 PST
Created attachment 299104 [details] Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 14 2017-01-18 13:36:45 PST
Simon Fraser (smfr)
Comment 15 2017-01-19 12:38:17 PST
Since we shipped with this (I think?) maybe we should revert this change. I would like to know when it regressed. Discussion in https://github.com/w3c/csswg-drafts/issues/116
Simon Fraser (smfr)
Comment 16 2017-01-19 18:06:48 PST
It turns out we never exposed those properties to the web. Undoing this change via bug 167223.
Note You need to log in before you can comment on or make changes to this bug.