background-repeat-x doesn't work https://bugs.webkit.org/show_bug.cgi?id=166997

Reviewed by Simon Fraser.

Source/WebCore:

During the creation of the new CSS parser, we accidentally forgot
to hook up background-repeat-x and background-repeat-y.

Tests: fast/backgrounds/background-repeat-x-y-parse.html
       fast/backgrounds/background-repeat-x-y.html

* css/parser/CSSParserFastPaths.cpp:
(WebCore::CSSParserFastPaths::isKeywordPropertyID):

LayoutTests:

* fast/backgrounds/background-repeat-x-y-expected.html: Added.
* fast/backgrounds/background-repeat-x-y-parse-expected.txt: Added.
* fast/backgrounds/background-repeat-x-y-parse.html: Added.
* fast/backgrounds/background-repeat-x-y.html: Added.

Canonical link: https://commits.webkit.org/184218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210882 268f45cc-cd09-0410-ab3c-d52691b4dbfc